appId: com.woocommerce.android
---
- runFlow:
    when:
      true: ${output.dashboardOriginalStates[CARD_SLUG] == 'unselected'}
    commands:
      - scrollUntilVisible:
          element:
            id: "dashboard_widget_editor_row_.*_${CARD_SLUG}_selected"
          direction: DOWN
          timeout: 10000
          label: "Find ${CARD_SLUG} dashboard card to restore"
      - tapOn:
          id: "dashboard_widget_editor_row_.*_${CARD_SLUG}_selected"
          label: "Restore ${CARD_SLUG} dashboard card to unselected"
      - extendedWaitUntil:
          visible:
            id: "dashboard_widget_editor_row_.*_${CARD_SLUG}_unselected"
          timeout: 5000
          label: "Verify ${CARD_SLUG} dashboard card restored"
